# quarrot

./: CMakeLists.txt  debug.py  launch.json.example  vcpkg.json
include/: Quarrot.h  debug.h  dset.h  open_mesh_adaptor.h  quarrot.h
src/: #quarrot (conflicted).cpp#  Quarrot.cpp  debug.cpp  pair.cpp  quarrot.cpp  subdivide.cpp
tests/: Test.cpp  test.cpp
